Found issue in header not responsive need to fix

--- a/app/assets/stylesheets/_header1.scss
+++ b/app/assets/stylesheets/_header1.scss
@@ -143,7 +143,7 @@ a:hover {
   padding-right: 2em;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 900px) {
   #nav-wrapper {
     overflow: hidden;
   }
